<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">shequbao</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_string">欢迎页面。。。。。。</string>
    <string name="homapage_head_one">签到</string>
    <string name="homapage_head_two">物业</string>
    <string name="homapage_head_three">居委会</string>
    <string name="homapage_head_four">查询</string>
        <string name="username">用户名:</string>
    <string name="password">密码:</string>
    <string name="register">注册</string>
    <string name="login">登陆</string>
    <string name="ok">确定</string>
        <string name="host_address">http://xgcweb.nat123.net:24022</string>
    

</resources>
