<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" >
	<TextView android:layout_width="300.0px"
		android:layout_height="wrap_content" android:text="用户登录"
		android:gravity="center_horizontal" android:textSize="20px" />

	<LinearLayout android:orientation="vertical" android:id="@+id/LinearLayout01"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_weight="1.0">
		<TextView android:id="@+id/TextView01" android:layout_width="200.0px"
			android:layout_height="wrap_content" android:text="@string/username"
			android:layout_gravity="center_horizontal" />
		<EditText android:id="@+id/UserName" android:layout_width="200.0px"
			android:layout_height="wrap_content" android:layout_gravity="center_horizontal" />
		<TextView android:id="@+id/TextView02" android:layout_width="200.0px"
			android:layout_height="wrap_content" android:text="@string/password"
			android:layout_gravity="center_horizontal" />
		<EditText android:id="@+id/pwd" android:layout_width="200.0px"
			android:layout_height="wrap_content" android:password="true"
			android:layout_gravity="center_horizontal" />
		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content">
			<Button android:layout_marginLeft="60px" android:id="@+id/login"
				android:layout_width="100dp" android:layout_height="wrap_content"
				android:text="@string/login" />
			<Button android:id="@+id/register" android:layout_width="100dp"
				android:layout_height="wrap_content" android:text="注册" />
			
		</LinearLayout>
	</LinearLayout>

</LinearLayout>
