<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white_color"
    android:orientation="vertical" >
<com.shequbao.tools.ImageCycleView
        android:id="@+id/homepage_head_viewpage"
        android:layout_width="match_parent"
        android:layout_height="150dp">
        
    
</com.shequbao.tools.ImageCycleView>
         <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/small_dividing_line"
            android:background="@color/hui_line_color"
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/middle_content_box"
        android:orientation="horizontal" 
        android:gravity="center_vertical"
        android:padding="5dp">
    

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/homepage_head_image1"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:contentDescription="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/homapage_head_one" />
        </LinearLayout>

        <TextView
            android:layout_width="@dimen/small_dividing_line"
            android:layout_height="30dp"
            android:background="@color/hui_line_color"
            android:padding="5dp"
            android:gravity="center_vertical" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/homepage_head_image2"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:contentDescription="@null" />

            <TextView
                android:id="@+id/homepage_head_text_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/homapage_head_two" />
        </LinearLayout>

        <TextView
            android:layout_width="@dimen/small_dividing_line"
            android:layout_height="30dp"
            android:padding="5dp"
            android:background="@color/hui_line_color"
            android:gravity="center_vertical" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/homepage_head_image3"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:contentDescription="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/homapage_head_three" />
        </LinearLayout>

        <TextView
            android:layout_width="@dimen/small_dividing_line"
            android:layout_height="30dp"
            android:padding="5dp"
            android:background="@color/hui_line_color"
            android:gravity="center_vertical" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/homepage_head_image4"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:contentDescription="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/homapage_head_four" />
        </LinearLayout>
     
    </LinearLayout>
     <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/big_dividing_line"
            android:background="@color/hui_line_color"
           
             />
</LinearLayout>